Header feature created

--- a/index.html
+++ b/index.html
@@ -1,21 +1,43 @@
 <!doctype html>
 <html lang="pl">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <head>
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+    />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <!-- Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-            href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Raleway:wght@300;400;700;800&display=swap"
-            rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;700&family=Raleway:wght@300;400;700;800&display=swap"
+      rel="stylesheet"
     />
     <title>BestShop RWD</title>
-</head>
-<body>
+  </head>
+  <body>
+    <!--  Header: Logo + Menu-->
+    <header class="header">
+      <div class="header__container container">
+        <a href="#" class="header__logo">BestShop</a>
+        <nav class="menu">
+          <ul class="header__menu">
+            <li class="header__menu-item"><a href="#why-us">Why Us</a></li>
+            <li class="header__menu-item"><a href="#benefits">Benefits</a></li>
+            <li class="header__menu-item"><a href="#prices">Prices</a></li>
+            <li class="header__menu-item"><a href="#contact">Contact</a></li>
+          </ul>
+        </nav>
+        <button class="header__menu-burger">
+          <strong>Menu</strong>
+          <span></span>
+          <span></span>
+          <span></span>
+        </button>
+      </div>
+    </header>
 
-<script type="module" src="/main.js"></script>
-</body>
+    <script type="module" src="/main.js"></script>
+  </body>
 </html>
