--- a/index.html
+++ b/index.html
@@ -38,6 +38,24 @@
       </div>
     </header>
 
+    <main>
+      <!--    Hero section-->
+      <section class="hero">
+        <div class="hero__intro">
+          <h1 class="hero__title">Sell More!</h1>
+          <p class="hero__motto">
+            Open shop on our platform and increase your sales
+          </p>
+          <a href="#" class="hero__button button"> Open your shop </a>
+        </div>
+        <img
+          src="/assets/background.png"
+          class="hero__bg-image"
+          alt="Widok z góry na Macbooka z dłońmi na klawiaturze, po lewej klendarz z długopisem i bileciki okazjonalne, po prawej iphone, filiżanka kawy i notes z długopisem"
+        />
+      </section>
+    </main>
+
     <script type="module" src="/main.js"></script>
   </body>
 </html>
