--- a/index.html
+++ b/index.html
@@ -54,6 +54,33 @@
           alt="Widok z góry na Macbooka z dłońmi na klawiaturze, po lewej klendarz z długopisem i bileciki okazjonalne, po prawej iphone, filiżanka kawy i notes z długopisem"
         />
       </section>
+
+
+      <!--  Footer-->
+      <footer class="footer">
+        <div class="footer__container container">
+          <div class="footer__left-part">
+            <a href="#" class="footer__logo-small">BestShop</a>
+            <div class="footer__copyright">
+              &copy; 2019 BestShop LTD, All Rights Reserved
+            </div>
+          </div>
+          <div class="footer__right-part">
+            <a href="https://twitter.com">
+              <img
+                      src="assets/twitter.svg"
+                      alt="Twitter link"
+                      class="footer__social"
+              /></a>
+            <a href="https://facebook.com"
+            ><img
+                    src="assets/facebook.svg"
+                    alt="Facebook link"
+                    class="footer__social"
+            /></a>
+          </div>
+        </div>
+      </footer>
     </main>
 
     <script type="module" src="/main.js"></script>
