--- a/index.html
+++ b/index.html
@@ -55,8 +55,84 @@
         />
       </section>
 
+      <!--Benefits section&ndash;&gt;-->
+            <section class="benefits" id="benefits">
+              <div class="container">
+                <div class="benefits-list">
+                  <div class="benefits-list__row">
+                    <div class="benefit-item-description">
+                      <h2 class="benefit-item-description__title">Be always first</h2>
+                      <p
+                        class="benefit-item-description__content"
+                        data-style-color="redish"
+                      >
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam.
+                      </p>
+                    </div>
+                    <div
+                      class="benefit-item-img benefit-item-img--decoration-red"
+                      data-type-img="macbook"
+                    >
+                      <img
+                        src="assets/macbook.png"
+                        alt="Fotografia laptopa Macbook"
+                      />
+                    </div>
+                  </div>
 
-      <!--  Footer-->
+                  <div class="benefits-list__row benefits-list__row--reverse">
+                    <div class="benefit-item-description">
+                      <h2 class="benefit-item-description__title">
+                        Your shop is<br />
+                        where you are!
+                      </h2>
+                      <p
+                        class="benefit-item-description__content"
+                        data-style-color="primary"
+                      >
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam.
+                      </p>
+                    </div>
+                    <div class="benefit-item-img benefit-item-img--decoration-blue">
+                      <img
+                        src="./assets/iPhone.png"
+                        alt="Fotografia telefonu iPhone"
+                      />
+                    </div>
+                  </div>
+                  <div class="benefits-list__row benefits-list__row--last">
+                    <div
+                      class="benefit-item-description benefit-item-description--single"
+                    >
+                      <h2 class="benefit-item-description__title">
+                        Increase regognition <br />your brand!
+                      </h2>
+                      <p
+                        class="benefit-item-description__content"
+                        data-style-color="green"
+                      >
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                        do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        Ut enim ad minim veniam.
+                      </p>
+                    </div>
+                    <div class="benefit-item-img benefit-item-img--single">
+                      <img
+                        src="assets/trumpet.png"
+                        alt="Fotografia telefonu iPhone"
+                      />
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </section>
+
+
+      <!--Footer-->
       <footer class="footer">
         <div class="footer__container container">
           <div class="footer__left-part">
