Statistic feature updated

--- a/index.html
+++ b/index.html
@@ -55,6 +55,49 @@
         />
       </section>
 
+      <!--  Statistics section-->
+      <section class="statistics" id="why-us">
+        <div class="container">
+          <h2 class="statistics__title">
+            The most popular sales platform in country
+          </h2>
+
+          <div class="statistics__list">
+            <div class="statistics__item">
+              <div class="statistics__item-image item-image--decoration-red">
+                <img
+                        src="assets/person.svg"
+                        alt="Piktogram osoby - ramiona, szyja, głowa"
+                />
+              </div>
+              <p class="statistics__item-count">100000+</p>
+              <p class="statistics__item-description">daily entries</p>
+            </div>
+            <div class="statistics__item">
+              <div class="statistics__item-image item-image--decoration-blue">
+                <img src="assets/eye.svg" alt="Piktogram oka" />
+              </div>
+              <p class="statistics__item-count">2000000+</p>
+              <p class="statistics__item-description">
+                seen products <br />every day
+              </p>
+            </div>
+            <div class="statistics__item">
+              <div class="statistics__item-image item-image--decoration-green">
+                <img
+                        src="assets/catalog.svg"
+                        alt="Piktogram folderu dokumentów"
+                />
+              </div>
+              <p class="statistics__item-count">10000+</p>
+              <p class="statistics__item-description">
+                added posts <br />daily
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
       <!--Benefits section&ndash;&gt;-->
             <section class="benefits" id="benefits">
               <div class="container">
