Pricing feature added

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
         </div>
       </section>
 
-      <!--Benefits section&ndash;&gt;-->
+      <!--Benefits section-->
             <section class="benefits" id="benefits">
               <div class="container">
                 <div class="benefits-list">
@@ -174,6 +174,97 @@
               </div>
             </section>
 
+      <!--Pricing section-->
+      <section class="pricing" id="prices">
+        <div class="container">
+          <h2 class="pricing-title">Pricing</h2>
+          <div class="pricing-list">
+            <div class="price-box" data-type="basic">
+              <div class="price-box__container">
+                <div class="price-box__container-vertical">
+                  <h3 class="price-box__title">Basic</h3>
+                  <span class="product-price">$0</span>
+                  <p>&nbsp;</p>
+                </div>
+                <ul class="price-box__properties-list">
+                  <li class="price-box__product-property" data-type-prop="pros">
+                    100 MB HDD
+                  </li>
+                  <li class="price-box__product-property" data-type-prop="pros">
+                    1 Subdomains
+                  </li>
+                  <li class="price-box__product-property" data-type-prop="pros">
+                    2 E-mails
+                  </li>
+                  <li class="price-box__product-property" data-type-prop="cons">
+                    Two years licence
+                  </li>
+                  <li class="price-box__product-property" data-type-prop="cons">
+                    Full support
+                  </li>
+                </ul>
+              </div>
+              <a href="#" class="buy-plan">Begin</a>
+            </div>
+            <div class="price-box" data-type="professional">
+              <div class="price-box__container">
+                <div class="price-box__container-vertical">
+                  <h3 class="price-box__title">Professional</h3>
+                  <span class="product-price">$25</span>
+                  <p>Limited offer</p>
+                </div>
+                <ul class="price-box__properties-list">
+                  <li class="price-box__product-property" data-type-prop="pros">
+                    500 MB HDD
+                  </li>
+                  <li class="price-box__product-property" data-type-prop="pros">
+                    2 Subdomains
+                  </li>
+                  <li class="price-box__product-property" data-type-prop="pros">
+                    5 E-mails
+                  </li>
+                  <li class="price-box__product-property" data-type-prop="pros">
+                    One year licence
+                  </li>
+                  <li class="price-box__product-property" data-type-prop="cons">
+                    Full support
+                  </li>
+                </ul>
+              </div>
+              <a href="#" class="buy-plan">Begin</a>
+            </div>
+            <div class="price-box" data-type="premium">
+              <div class="price-box__container">
+                <div class="price-box__container-vertical">
+                  <h3 class="price-box__title">Premium</h3>
+                  <span class="product-price">$60</span>
+                  <p>Limited offer</p>
+                </div>
+                <ul class="price-box__properties-list">
+                  <li class="price-box__product-property" data-type-prop="pros">
+                    2 GB HDD
+                  </li>
+                  <li class="price-box__product-property" data-type-prop="pros">
+                    5 Subdomains
+                  </li>
+                  <li class="price-box__product-property" data-type-prop="pros">
+                    20 E-mails
+                  </li>
+                  <li class="price-box__product-property" data-type-prop="pros">
+                    Two years licence
+                  </li>
+                  <li class="price-box__product-property" data-type-prop="pros">
+                    Full support
+                  </li>
+                </ul>
+              </div>
+              <a href="#" class="buy-plan">Begin</a>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
 
       <!--Footer-->
       <footer class="footer">
@@ -200,7 +291,7 @@
           </div>
         </div>
       </footer>
-    </main>
+
 
     <script type="module" src="/main.js"></script>
   </body>
