Contact feature created

--- a/index.html
+++ b/index.html
@@ -263,6 +263,57 @@
           </div>
         </div>
       </section>
+
+      <!--Contact section-->
+      <section class="contact" id="contact">
+        <div class="contact__container container">
+          <div class="column-info">
+            <h2 class="contact-title">Any questions?</h2>
+            <p>Leave your email address or call us!</p>
+            <ul class="contact-data">
+              <li class="contact-data__item contact-data__item--mail"><a href="" class="contact-data__link">info@bestshop.xyz</a></li>
+              <li class="contact-data__item contact-data__item--phone"><a href="" class="contact-data__link">123 456 789</a></li>
+            </ul>
+          </div>
+          <div class="column-contact">
+            <form action="" class="contact-form">
+              <div class="form-row">
+                <label for="name" class="form-label">Name</label>
+                <input
+                        type="text"
+                        name="name"
+                        id="name"
+                        required class="form-control"
+                />
+              </div>
+              <div class="form-row">
+                <label for="email" class="form-label">Email</label>
+                <input
+                        type="email"
+                        name="email"
+                        id="email"
+                        required class="form-control"
+                />
+              </div>
+              <div class="form-row">
+                <div class="form-check">
+                  <input type="checkbox" name="form-check-input" id="consent" class="form-check-input"/>
+                  <label for="consent" class="form-check-label"
+                  >I hereby give consent for my personal data included in my application to be processed for the
+                    purposes of the recruitment process under the European Parliament's and Council of the
+                    European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with
+                    regard to the processing of personal data and on the fre movement of such dat, and repealing
+                    Directive 95/46/EC (Data Protection Directive)</label
+                  >
+                </div>
+              </div>
+              <div class="form-row form-row--last">
+                <button type="submit" class="button button--primary button--contact ">Send</button>
+              </div>
+            </form>
+          </div>
+        </div>
+      </section>
     </main>
 
 
