Calculator basic HTML structure created

--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
             <div class="statistics__item">
               <div class="statistics__item-image item-image--decoration-red">
                 <img
-                        src="assets/person.svg"
-                        alt="Piktogram osoby - ramiona, szyja, głowa"
+                  src="assets/person.svg"
+                  alt="Piktogram osoby - ramiona, szyja, głowa"
                 />
               </div>
               <p class="statistics__item-count">100000+</p>
@@ -85,8 +85,8 @@
             <div class="statistics__item">
               <div class="statistics__item-image item-image--decoration-green">
                 <img
-                        src="assets/catalog.svg"
-                        alt="Piktogram folderu dokumentów"
+                  src="assets/catalog.svg"
+                  alt="Piktogram folderu dokumentów"
                 />
               </div>
               <p class="statistics__item-count">10000+</p>
@@ -99,80 +99,80 @@
       </section>
 
       <!--Benefits section-->
-            <section class="benefits" id="benefits">
-              <div class="container">
-                <div class="benefits-list">
-                  <div class="benefits-list__row">
-                    <div class="benefit-item-description">
-                      <h2 class="benefit-item-description__title">Be always first</h2>
-                      <p
-                        class="benefit-item-description__content"
-                        data-style-color="redish"
-                      >
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                        do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam.
-                      </p>
-                    </div>
-                    <div
-                      class="benefit-item-img benefit-item-img--decoration-red"
-                      data-type-img="macbook"
-                    >
-                      <img
-                        src="assets/macbook.png"
-                        alt="Fotografia laptopa Macbook"
-                      />
-                    </div>
-                  </div>
-
-                  <div class="benefits-list__row benefits-list__row--reverse">
-                    <div class="benefit-item-description">
-                      <h2 class="benefit-item-description__title">
-                        Your shop is<br />
-                        where you are!
-                      </h2>
-                      <p
-                        class="benefit-item-description__content"
-                        data-style-color="primary"
-                      >
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                        do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam.
-                      </p>
-                    </div>
-                    <div class="benefit-item-img benefit-item-img--decoration-blue">
-                      <img
-                        src="./assets/iPhone.png"
-                        alt="Fotografia telefonu iPhone"
-                      />
-                    </div>
-                  </div>
-                  <div class="benefits-list__row benefits-list__row--last">
-                    <div
-                      class="benefit-item-description benefit-item-description--single"
-                    >
-                      <h2 class="benefit-item-description__title">
-                        Increase regognition <br />your brand!
-                      </h2>
-                      <p
-                        class="benefit-item-description__content"
-                        data-style-color="green"
-                      >
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
-                        do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-                        Ut enim ad minim veniam.
-                      </p>
-                    </div>
-                    <div class="benefit-item-img benefit-item-img--single">
-                      <img
-                        src="assets/trumpet.png"
-                        alt="Fotografia telefonu iPhone"
-                      />
-                    </div>
-                  </div>
-                </div>
+      <section class="benefits" id="benefits">
+        <div class="container">
+          <div class="benefits-list">
+            <div class="benefits-list__row">
+              <div class="benefit-item-description">
+                <h2 class="benefit-item-description__title">Be always first</h2>
+                <p
+                  class="benefit-item-description__content"
+                  data-style-color="redish"
+                >
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam.
+                </p>
               </div>
-            </section>
+              <div
+                class="benefit-item-img benefit-item-img--decoration-red"
+                data-type-img="macbook"
+              >
+                <img
+                  src="assets/macbook.png"
+                  alt="Fotografia laptopa Macbook"
+                />
+              </div>
+            </div>
+
+            <div class="benefits-list__row benefits-list__row--reverse">
+              <div class="benefit-item-description">
+                <h2 class="benefit-item-description__title">
+                  Your shop is<br />
+                  where you are!
+                </h2>
+                <p
+                  class="benefit-item-description__content"
+                  data-style-color="primary"
+                >
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam.
+                </p>
+              </div>
+              <div class="benefit-item-img benefit-item-img--decoration-blue">
+                <img
+                  src="./assets/iPhone.png"
+                  alt="Fotografia telefonu iPhone"
+                />
+              </div>
+            </div>
+            <div class="benefits-list__row benefits-list__row--last">
+              <div
+                class="benefit-item-description benefit-item-description--single"
+              >
+                <h2 class="benefit-item-description__title">
+                  Increase regognition <br />your brand!
+                </h2>
+                <p
+                  class="benefit-item-description__content"
+                  data-style-color="green"
+                >
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed
+                  do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                  Ut enim ad minim veniam.
+                </p>
+              </div>
+              <div class="benefit-item-img benefit-item-img--single">
+                <img
+                  src="assets/trumpet.png"
+                  alt="Fotografia telefonu iPhone"
+                />
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
 
       <!--Pricing section-->
       <section class="pricing" id="prices">
@@ -264,6 +264,74 @@
         </div>
       </section>
 
+      <!--      Calculator-->
+      <section class="calc">
+        <h2>Calculate how much you’ll pay</h2>
+
+        <div class="calc__columns">
+          <form class="calc__form">
+            <div class="calc__input">
+              <input type="number" class="form__input" id="products" min="1" step="1" placeholder="Products quantity"/>
+            </div>
+            <div class="calc__input">
+              <input type="number" class="form__input" id="orders" min="1" step="1" placeholder="Estimated orders in month"/>
+            </div>
+            <div class="calc__select" id="package" data-value="">
+              <div class="select__input">
+                Choose package
+              </div>
+
+              <ul class="select__dropdown">
+                <li data-value="basic">Basic</li>
+                <li data-value="professional">Professional</li>
+                <li data-value="premium">Premium</li>
+              </ul>
+            </div>
+            <label class="form__checkbox">
+              <input type="checkbox" id="accounting"/>
+              <span class="checkbox"></span>
+              <p class="consent__text">Accounting</p>
+            </label>
+            <label class="form__checkbox">
+              <input type="checkbox" id="terminal"/>
+              <span class="checkbox"></span>
+              <p class="consent__text">Rental of a payment terminal</p>
+            </label>
+          </form>
+
+          <div class="calc__summary">
+            <ul>
+              <li class="list__item" data-id="products">
+                <span class="item__type">Products</span>
+                <span class="item__calc">20 * $0.5</span>
+                <span class="item__price">$10</span>
+              </li>
+              <li class="list__item" data-id="orders">
+                <span class="item__type">Orders</span>
+                <span class="item__calc">20 * $0.5</span>
+                <span class="item__price">$10</span>
+              </li>
+              <li class="list__item" data-id="package">
+                <span class="item__type">Package</span>
+                <span class="item__calc">Premium</span>
+                <span class="item__price">$10</span>
+              </li>
+              <li class="list__item" data-id="accounting">
+                <span class="item__type">Accounting</span>
+                <span class="item__price">$10</span>
+              </li>
+              <li class="list__item" data-id="terminal">
+                <span class="item__type">Terminal</span>
+                <span class="item__price">$10</span>
+              </li>
+            </ul>
+            <div class="summary__total" id="total-price">
+              <span>Total</span>
+              <span class="total__price">$700</span>
+            </div>
+          </div>
+        </div>
+      </section>
       <!--Contact section-->
       <section class="contact" id="contact">
         <div class="contact__container container">
@@ -271,8 +339,12 @@
             <h2 class="contact-title">Any questions?</h2>
             <p>Leave your email address or call us!</p>
             <ul class="contact-data">
-              <li class="contact-data__item contact-data__item--mail"><a href="" class="contact-data__link">info@bestshop.xyz</a></li>
-              <li class="contact-data__item contact-data__item--phone"><a href="" class="contact-data__link">123 456 789</a></li>
+              <li class="contact-data__item contact-data__item--mail">
+                <a href="" class="contact-data__link">info@bestshop.xyz</a>
+              </li>
+              <li class="contact-data__item contact-data__item--phone">
+                <a href="" class="contact-data__link">123 456 789</a>
+              </li>
             </ul>
           </div>
           <div class="column-contact">
@@ -280,70 +352,81 @@
               <div class="form-row">
                 <label for="name" class="form-label">Name</label>
                 <input
-                        type="text"
-                        name="name"
-                        id="name"
-                        required class="form-control"
+                  type="text"
+                  name="name"
+                  id="name"
+                  required
+                  class="form-control"
                 />
               </div>
               <div class="form-row">
                 <label for="email" class="form-label">Email</label>
                 <input
-                        type="email"
-                        name="email"
-                        id="email"
-                        required class="form-control"
+                  type="email"
+                  name="email"
+                  id="email"
+                  required
+                  class="form-control"
                 />
               </div>
               <div class="form-row">
                 <div class="form-check">
-                  <input type="checkbox" name="form-check-input" id="consent" class="form-check-input"/>
+                  <input
+                    type="checkbox"
+                    name="form-check-input"
+                    id="consent"
+                    class="form-check-input"
+                  />
                   <label for="consent" class="form-check-label"
-                  >I hereby give consent for my personal data included in my application to be processed for the
-                    purposes of the recruitment process under the European Parliament's and Council of the
-                    European Union Regulation on the Protection of Natural Persons as of 27 April 2016, with
-                    regard to the processing of personal data and on the fre movement of such dat, and repealing
-                    Directive 95/46/EC (Data Protection Directive)</label
+                    >I hereby give consent for my personal data included in my
+                    application to be processed for the purposes of the
+                    recruitment process under the European Parliament's and
+                    Council of the European Union Regulation on the Protection
+                    of Natural Persons as of 27 April 2016, with regard to the
+                    processing of personal data and on the fre movement of such
+                    dat, and repealing Directive 95/46/EC (Data Protection
+                    Directive)</label
                   >
                 </div>
               </div>
               <div class="form-row form-row--last">
-                <button type="submit" class="button button--primary button--contact ">Send</button>
+                <button
+                  type="submit"
+                  class="button button--primary button--contact"
+                >
+                  Send
+                </button>
               </div>
             </form>
           </div>
         </div>
       </section>
     </main>
-
-
-      <!--Footer-->
-      <footer class="footer">
-        <div class="footer__container container">
-          <div class="footer__left-part">
-            <a href="#" class="footer__logo-small">BestShop</a>
-            <div class="footer__copyright">
-              &copy; 2019 BestShop LTD, All Rights Reserved
-            </div>
-          </div>
-          <div class="footer__right-part">
-            <a href="https://twitter.com">
-              <img
-                      src="assets/twitter.svg"
-                      alt="Twitter link"
-                      class="footer__social"
-              /></a>
-            <a href="https://facebook.com"
-            ><img
-                    src="assets/facebook.svg"
-                    alt="Facebook link"
-                    class="footer__social"
-            /></a>
+    <!--Footer-->
+    <footer class="footer">
+      <div class="footer__container container">
+        <div class="footer__left-part">
+          <a href="#" class="footer__logo-small">BestShop</a>
+          <div class="footer__copyright">
+            &copy; 2019 BestShop LTD, All Rights Reserved
           </div>
         </div>
-      </footer>
-
-
+        <div class="footer__right-part">
+          <a href="https://twitter.com">
+            <img
+              src="assets/twitter.svg"
+              alt="Twitter link"
+              class="footer__social"
+          /></a>
+          <a href="https://facebook.com"
+            ><img
+              src="assets/facebook.svg"
+              alt="Facebook link"
+              class="footer__social"
+          /></a>
+        </div>
+      </div>
+    </footer>
     <script type="module" src="/main.js"></script>
   </body>
 </html>
